<resources>
    <string name="app_name">Pride</string>
    <string name="action_settings">Settings</string>
    <string name="intro">intro</string>
    <string name="envy">envy</string>
    <string name="vainglory">vainglory</string>
    <string name="sloth">sloth</string>
    <string name="avarice">avarice</string>
    <string name="anger">anger</string>
    <string name="gluttony">gluttony</string>
    <string name="lust">lust</string>
    <string name="pride">PRIDE</string>
    <string name="summary">SUMMARY</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="reflect">REFLECT</string>
    <string name="notes">Notes</string>
    <string name="puttingToDeath">PUTTING TO DEATH</string>
    <string name="askGod">ASK GOD</string>
    <string name="practice">PRACTICE</string>
    <string name="devo_envy_title">FEELING BITTER WHEN OTHERS HAVE IT BETTER</string>
    <string name="devo_envy_subtitle">RESENTING OTHERS’ GIFTS FROM GOD BECAUSE THEY APPEAR BETTER THAN YOURS</string>
    <string name="devo_envy_summary">"“The bottom line for the envious is how they stack up against others, because they measure their self-worth comparatively. The envious sorrow over another’s good because it excels their own, and because the comparison reveals not only their lack of that particular good, but also their consequent lack of worth. Unlike the possession of goodness (“I am good/this is good), “to excel” is a two-term relation, implying a comparative ranking: “I excel you.”

“Enviers don’t usually envy those who are far removed from their lives and lifestyles, or who are vastly more talented or successful than they are. They tend to envy people to whom they might actually be compared unfavorably, that is, those who are just like them—only better. A writer couldn’t care less if an Olympic athlete wins gold in the 5,000-meter run, while she can barely finish a local 5K road race. But she burns when her colleague gets a rave review on his new novel, while her own published work gets only half-hearted notice…As [Thomas] Aquinas puts it, we envy only those whom we wish to rival or surpass in reputation.”"</string>
    <string name="devo_envy_pride_summary">“The vice of envy is rooted in pride, because the envier takes it to be her prerogative and responsibility to make her own place in the ranking and manufacture her own worth by usurping God’s role: founding their self-worth on their own claims to excellence, creating their own superior status by engineering the downfall of their competitors, and deciding for themselves who is and who is not worthy of the greater gifts.”</string>
    <string name="devo_envy_bible_verse">JAMES 3:13-18</string>
    <string name="devo_envy_reflect">"Envy strikes at the heart of our identity and worth. We envy those who are better than we are in areas that are central to how we define ourselves. 

Spend some time reflecting on what you personally envy others for. What do these things tell you about how you measure your self-worth? 

The danger of envy is that it isn’t just something we feel on the inside. It corrodes our relationships with others by focusing all our time and energy on ourselves. As a result we become more bitter and selfish. It doesn’t just stop there. James tells us that envy leads to disorder and opens us up to every evil practice. 

Consider how envy infects the various aspects of your life."</string>
    <string name="devo_envy_kids">Here’s a simple definition of envy. Envy is unhappiness at the success of others and pleasure at the suffering of others. When we envy, we’re sad when others are glad and glad when they are sad. The values of life are turned upside down.

\n\nThere are many warnings about envy in the Bible, but there is no greater example of its destructive power than the life of <b>King Saul</b>. He is Exhibit A of what happens when envy takes over. The heart of the story is found in <b>I SAMUEL 18:5-12</b>.

\n\nThe story of Saul’s repeated attempts to kill David is meant to warn of the deadly destructive power of envy. What happened to Saul can easily happen to any of us (maybe not murder but jealousy that damages relationships).

\n\nIt’s crucial to identify the real problem of envy. When we envy, our struggle is not with the person we envy. Our real struggle is with God. When we envy, we’re saying, “Lord, you made a mistake when you gave that person so many blessings. I deserve some of what you gave him.” More than that, we’re really accusing God of unfairness. When you envy, you are accusing God of falling down on the job.

\n\nHow can we be set free? Start with being grateful.

\n\n<b>“AND WHATEVER YOU DO, WHETHER IN WORD OR DEED, DO IT ALL IN THE NAME OF THE LORD JESUS, GIVING THANKS TO GOD THE FATHER THROUGH HIM.” COLOSSIANS 3:17</b>

\n\n<b>Parents</b>, teach your kids to be content with what they have at any given time. Resist comparing what your family has to what others have – from a larger house or a newer car, to better grades or more talents. Don’t complain about your circumstances or nurture an attitude of resentment. Help your kids notice all the good that God is doing in your lives. Encourage them to thank God regularly for their blessings, and to thank other people who’ve done something valuable for them. Gratefulness will melt away envy.</string>
    <string name="devo_envy_kids_prayer">Prince of Peace, Help me to not be envious towards my family and friends but to be happy for them and encourage them to do their best. Cleanse me of anything that breaks Your heart, oh Savior. Help me live a righteous life, that I may experience Your love and show love in return to all I come into contact with. In Jesus’ mighty name, Amen!!!</string>
    <string name="devo_vainglory_title">IMAGE IS EVERYTHING</string>
    <string name="devo_vainglory_subtitle">TRYING TO APPEAR BETTER THAN WE ARE TO WIN RECOGNITION AND APPROVAL FROM OTHERS</string>
    <string name="devo_vainglory_summary">"“Most of us know this vice well, even if we have never heard this name for it before. Vainglory is the excessive and disordered desire for recognition and approval from others.”

“When caught in the vice of vain-glory, we want acclaim too much, so much, in fact, that we will accept it whether it is deserved or not.”

“The vainglorious…do not aspire to something because it is excellent. Rather, they seek whatever will bring in the most public applause, whether deserving or not…The whole point for the vainglorious is that others take notice. When we are plagued by this vice, we need people to nod and smile approvingly when we walk by. Vainglory disposes us to be more concerned with our reputation (what others think about us) than with what we really are. For the vainglorious, image is everything.”"</string>
    <string name="devo_vainglory_pride_summary">“Both pride and vainglory seek to make us the center of the universe. With vainglory, our best energy goes into enhancing and controlling our image, appearance, and reputation. In the end, however, trying to manage our own reputation and manufacture approval for ourselves yields a life of isolation, falsity and shallowness, and self-preoccupation.”</string>
    <string name="devo_vainglory_bible_verse">MATTHEW 6:1-8</string>
    <string name="devo_vainglory_reflect">"Vainglory is about making ourselves look better than we really are. In Chinese culture we call this “saving face.” We are worried more about what others think about us than we are with what we really are.

Take some time to consider how much of your time is and energy is directed towards “keeping up appearances”? Write down some specific instances of how vainglory expresses itself in your life.

Reflect on the ways in which the reputation you have built up is a false representation of who you really are.

Take some time to consider the “why” of all your vainglorious pursuits. What ultimately are the pay-offs? How much do these things really matter? What would it look like for you to take Jesus’ counsel about making a habit of doing good things in “secret”?"</string>
    <string name="devo_vainglory_kids">Prideful people want more than anything else to be "number one"—they seek greatness and superiority, even in ways that appropriately belong only to God. Pride is the root of so much other evil. It is pride that makes some of us think we are better than everyone else, that rules do not apply to us, or that we simply cannot fail whatever we attempt.

\n\nScripture shows us the results of pride through the example of <b>King Nebuchadnezzar</b> in <b>DANIEL 5:20-21</b>. When Nebuchadnezzar became prideful and thought he was better than everyone else, God humbled him. King Nebuchadnezzar lived like an animal (even eating grass, YUCK!) until he came to his senses and repented of his sin. Only then did God then restore Nebuchadnezzar’s kingdom to him.

\n\n<b>Parents</b>, be careful or you’ll end up nurturing enormous egos in your kids if you indulge their selfish impulses by saying “yes” to whatever they want. Instead, set healthy boundaries and stick to them. Teach your kids the importance of working with others instead of expecting to live life on their terms all the time. Require them to treat other people with respect. Help your kids learn why authority is important, and teach them to submit to it. Teach your children how to confess their sins and repent to God.

\n\nHere is a good practice this week: Pray the <b>Lord’s Prayer</b> together. The Lord’s Prayer <b>(Matthew 6:9-13)</b>, prayed earnestly, keeps our pride in check. We pray together, <b>“OUR FATHER IN HEAVEN, HALLOWED BE YOUR NAME. YOUR KINGDOM COME, YOUR WILL BE DONE, ON EARTH AS IT IS IN HEAVEN.”</b>

\n\nDo you see how this prayer is a cure to pride? We are not praying, “Hallowed be <b>MY</b> name. <b>MY</b> kingdom come, <b>MY</b> will be done.” In following Jesus we follow one who called us to serve, who washed his disciples feet, who laid down his life for us. The more you seek God first, the more you will see yourself through God’s eyes.</string>
    <string name="devo_vainglory_kids_prayer">Dear Jesus, you were compassionate with people who saw themselves too often as “being” wrong and bad, as missing the mark. You were honest with people who proudly saw themselves as “being” right and good, always hitting that mark. Be an accurate mirror to each one of us, Lord, reflecting who we are and where we need your grace and instruction in our lives. Amen.</string>
    <string name="devo_sloth_title">LAZY ABOUT LOVE</string>
    <string name="devo_sloth_subtitle">BEING UNWILLING TO BE OR DO ALL GOD WANTS FROM US BECAUSE THAT WOULD TAKE EFFORT AND WE WANT THE EASY WAY OUT</string>
    <string name="devo_sloth_summary">"“Sloth is opposed to the great Christian virtue of diligence—that powerful sense of responsibility, dedication to hard work, and conscientious completion of one’s duties. And what is hard work and dedication at its best, after all, but an expression of love and devotion? The telltale root of our word diligence is the Latin diligere, which means ‘to love.’ Sloth, on this view, is apathy—comfortable indifference to duty and neglect of other human beings’ needs. If you don’t work hard, you don’t care enough. Sloth becomes a sin not merely because it makes us lazy, but because of the lack of love that lies behind that laziness.”

“It is through daily practices and disciplines, whether we feel like doing them or not, that the decision to love is renewed and refreshed, and the commitment of love is kept alive. The slothful person, in this sense, is one who resists the effort of doing day after day after day whatever it takes to keep the bonds of love strong an living and healthy, whether he or she feels particularly inspired about doing it or not.”"</string>
</resources>