<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/devoScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/devoHeaderLayout" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="8.0dip"
            android:text="@string/summary"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@id/textViewSummary"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8.0dip"
            android:background="#ffcdcdcd"
            android:padding="16.0dip"
            android:text="@string/devo_envy_summary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:id="@id/linearLayoutSymptoms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

</ScrollView>